# SAGAIProducer

./: .gitignore  .pre-commit-config.yaml  README.md  README_downstream.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/rulesets/: Require-Merge-Request.json
python_template/: main.py
tasks/: checks.py  setup.py
